--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: MTech CollectionBuilder SA Demo
 tagline: Small Demo Collection for MTech
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-SA is a template for creating digital collection exhibits using static web technology."  
+description: "A CollectionBuilder-SA demo for MTech."  
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 # Organization branding
